// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`invitation - mentions selector 1`] = `
Object {
  " id1": Array [
    Object {
      "nickname": "test1",
      "timeStamp": 1234567,
    },
    Object {
      "nickname": "test2",
      "timeStamp": 1234567,
    },
  ],
  " id2": Array [
    Object {
      "nickname": "test3",
      "timeStamp": 1234567,
    },
    Object {
      "nickname": "test4",
      "timeStamp": 1234567,
    },
  ],
}
`;

exports[`invitation - mentions selector channel 1 1`] = `
Array [
  Object {
    "nickname": "test1",
    "timeStamp": 1234567,
  },
  Object {
    "nickname": "test2",
    "timeStamp": 1234567,
  },
]
`;

exports[`invitation - mentions selector channel 2 1`] = `
Array [
  Object {
    "nickname": "test1",
    "timeStamp": 1234567,
  },
  Object {
    "nickname": "test2",
    "timeStamp": 1234567,
  },
]
`;
